--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav class="n fq" style="background-color:#000000">
       <div class="nav-wrapper dv">
-        <a href="/startup-basic-elements.html" class="brand-logo"><img src="./influx-logo.png" height="50px" style="margin-top: 10px"></a>
+        <a href="/index.html" class="brand-logo"><img src="./influx-logo.png" height="50px" style="margin-top: 10px"></a>
         <ul id="nav-mobile" class="ag hide-on-med-and-down">
           <li><a href="#services">Services</a></li>
           <li><a href="#contact">Contact</a></li>
