--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <title>Influx - Home</title>
     <!-- Stylesheet -->
-    <link href="http://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/startup-materialize.min.css?v=68013164329053048961511298916" rel="stylesheet">
+    <link href="./index.css" rel="stylesheet">
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="./style.css" rel="stylesheet">
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav class="n fq" style="background-color:#000000">
       <div class="nav-wrapper dv">
-        <a href="/index.html" class="brand-logo"><img src="./influx-logo.png" height="50px" style="margin-top: 10px"></a>
+        <a href="./index.html" class="brand-logo"><img src="./influx-logo.png" height="50px" style="margin-top: 10px"></a>
         <ul id="nav-mobile" class="ag hide-on-med-and-down">
           <li><a href="#services">Services</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -38,7 +38,7 @@
         <div class="d iv">
           <h1 style="color: #fff; font-size: 64px;" class="header1">Put your money to work.</h1>
           <span class="dx">YOUR ACCESS TO <span>INFLUX </span>INVESTMENT</span>
-          <button class="read-more"><i class="icon-caret-down"></i></button>
+          <!-- <button class="read-more"><i class="large material-icons" style="font-size: 150px;">arrow_drop_down</i></button> -->
         </div>
       </div>
     </div>
@@ -53,27 +53,27 @@
         <div class="c">
           <div class="d iv"><h2 class="section-title">Features</h2></div>
           <div class="d iv jo kk">
-            <h4><i class="icon-light-bulb"></i></h4>
+            <h4><i class="large material-icons" style="font-size: 40px">lightbulb_outline</i></h4>
             <p class="ek">It really separates you from the crowd.</p>
           </div>
           <div class="d iv jo kk">
-            <h4><i class="icon-bolt"></i></h4>
+            <h4><i class="large material-icons" style="font-size: 40px">flash_on</i></h4>
             <p class="ek">Saves you for the rainy day.</p>
           </div>
           <div class="d iv jo kk">
-            <h4><i class="icon-rocket"></i></h4>
+            <h4><i class="large material-icons" style="font-size: 40px">filter_vintage</i></h4>
             <p class="ek">Invest as much or as little as you want.</p>
           </div>
           <div class="d iv jo kk">
-            <h4><i class="icon-settings"></i></h4>
+            <h4><i class="large material-icons" style="font-size: 40px">settings_input_component</i></h4>
             <p class="ek">You trust us with your investments and we take that very seriously. </p>
           </div>
           <div class="d iv jo kk">
-            <h4><i class="icon-umbrella"></i></h4>
+            <h4><i class="large material-icons" style="font-size: 40px">beach_access</i></h4>
             <p class="ek">We use state-of-the-art data encryption when handling your financial information</p>
           </div>
           <div class="d iv jo kk">
-            <h4><i class="icon-compass"></i></h4>
+            <h4><i class="large material-icons" style="font-size: 40px">devices_other</i></h4>
             <p class="ek">Our payment processor satisfies the highest level of Security Audit available.</p>
           </div>
         </div>
@@ -89,7 +89,7 @@
 
             <div class="pricing-table">
               <div class="pricing-header">
-                <i class="icon-paper-plane"></i>
+                <i class="large material-icons" style="font-size: 40px">near_me</i>
                 <h4>Basic</h4>
                 <div class="gd">
                   <span class="hm">$flux</span>
@@ -98,13 +98,13 @@
                 </div>
               </div>
               <ul class="pricing-features">
-                <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                <li class="pricing-feature au"><i class="icon-close"></i>Pro and above.</li>
-                <li class="pricing-feature au"><i class="icon-close"></i>Enterprise only.</li>
-                <li class="pricing-feature au"><i class="icon-close"></i>Enterprise only.</li>
-                <li class="pricing-feature au"><i class="icon-close"></i>Enterprise only.</li>
+                <li class="pricing-feature"><i class="large material-icons" style="font-size: 15px">check_circle</i>10 product uses.</li>
+                <li class="pricing-feature"><i class="large material-icons" style="font-size: 15px">check_circle</i>10 product uses.</li>
+                <li class="pricing-feature"><i class="large material-icons" style="font-size: 15px">check_circle</i>10 product uses.</li>
+                <li class="pricing-feature au"><i class="large material-icons" style="font-size: 15px">check_circle</i>Pro and above.</li>
+                <li class="pricing-feature au"><i class="large material-icons" style="font-size: 15px">check_circle</i>Enterprise only.</li>
+                <li class="pricing-feature au"><i class="large material-icons" style="font-size: 15px">check_circle</i>Enterprise only.</li>
+                <li class="pricing-feature au"><i class="large material-icons" style="font-size: 15px">check_circle</i>Enterprise only.</li>
               </ul>
             </div>
           </div>
@@ -112,7 +112,7 @@
           <div class="d iv kr">
             <div class="pricing-table fk">
               <div class="pricing-header">
-                <i class="icon-plane"></i>
+                <i class="large material-icons" style="font-size: 40px">stars</i>
                 <h4>Pro</h4>
                 <div class="gd">
                   <span class="hm">$flux</span>
@@ -121,13 +121,13 @@
                 </div>
               </div>
               <ul class="pricing-features">
-                <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                <li class="pricing-feature"><i class="icon-accept"></i>Pro and above.</li>
-                <li class="pricing-feature au"><i class="icon-close"></i>Enterprise only.</li>
-                <li class="pricing-feature au"><i class="icon-close"></i>Enterprise only.</li>
-                <li class="pricing-feature au"><i class="icon-close"></i>Enterprise only.</li>
+                <li class="pricing-feature"><i class="large material-icons" style="font-size: 15px">check_circle</i>10 product uses.</li>
+                <li class="pricing-feature"><i class="large material-icons" style="font-size: 15px">check_circle</i>10 product uses.</li>
+                <li class="pricing-feature"><i class="large material-icons" style="font-size: 15px">check_circle</i>10 product uses.</li>
+                <li class="pricing-feature"><i class="large material-icons" style="font-size: 15px">check_circle</i>Pro and above.</li>
+                <li class="pricing-feature au"><i class="large material-icons" style="font-size: 15px">check_circle</i>Enterprise only.</li>
+                <li class="pricing-feature au"><i class="large material-icons" style="font-size: 15px">check_circle</i>Enterprise only.</li>
+                <li class="pricing-feature au"><i class="large material-icons" style="font-size: 15px">check_circle</i>Enterprise only.</li>
               </ul>
             </div>
           </div>
@@ -135,7 +135,7 @@
           <div class="d iv kr">
             <div class="pricing-table">
               <div class="pricing-header">
-                <i class="icon-rocket"></i>
+                <i class="large material-icons" style="font-size: 40px">airplanemode_active</i>
                 <h4>Enterprise</h4>
                 <div class="gd">
                   <span class="hm">$flux</span>
@@ -144,13 +144,13 @@
                 </div>
               </div>
               <ul class="pricing-features">
-                <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                <li class="pricing-feature"><i class="icon-accept"></i>Enterprise only.</li>
-                <li class="pricing-feature"><i class="icon-accept"></i>Enterprise only.</li>
-                <li class="pricing-feature"><i class="icon-accept"></i>Enterprise only.</li>
+                <li class="pricing-feature"><i class="large material-icons" style="font-size: 15px">check_circle</i>10 product uses.</li>
+                <li class="pricing-feature"><i class="large material-icons" style="font-size: 15px">check_circle</i>10 product uses.</li>
+                <li class="pricing-feature"><i class="large material-icons" style="font-size: 15px">check_circle</i>10 product uses.</li>
+                <li class="pricing-feature"><i class="large material-icons" style="font-size: 15px">check_circle</i>10 product uses.</li>
+                <li class="pricing-feature"><i class="large material-icons" style="font-size: 15px">check_circle</i>Enterprise only.</li>
+                <li class="pricing-feature"><i class="large material-icons" style="font-size: 15px">check_circle</i>Enterprise only.</li>
+                <li class="pricing-feature"><i class="large material-icons" style="font-size: 15px">check_circle</i>Enterprise only.</li>
               </ul>
             </div>
           </div>
@@ -222,6 +222,6 @@
     <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/materialize/0.98.2/js/materialize.min.js"></script>
-    <script src="http://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/startup-all-min.js?v=34133613281816218821510704280" crossorigin="anonymous"></script>
+    <script src="./index.js" crossorigin="anonymous"></script>
   </body>
 </html>
